--- a/views/register.ejs
+++ b/views/register.ejs
@@ -1,18 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <link rel="stylesheet" href="/css/style.css">
+  <meta charset="UTF-8">
   <title>Register</title>
 </head>
 <body>
   <h1>Register</h1>
-  <% if (typeof error !== "undefined") { %>
-    <p style="color: red;"><%= error %></p>
-  <% } %>
   <form action="/register" method="POST">
-    <input type="text" name="username" placeholder="Username" required>
-    <input type="password" name="password" placeholder="Password" required>
+    <input type="text" name="username" placeholder="Enter Username" required>
+    <input type="password" name="password" placeholder="Enter Password" required>
     <button type="submit">Register</button>
   </form>
+  <% if (error) { %> <p><%= error %></p> <% } %>
+  <% if (successMessage) { %> <p><%= successMessage %></p> <% } %>
 </body>
 </html>
