--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,18 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <link rel="stylesheet" href="/css/style.css">
+  <meta charset="UTF-8">
   <title>Login</title>
 </head>
 <body>
   <h1>Login</h1>
-  <% if (typeof error !== "undefined") { %>
-    <p style="color: red;"><%= error %></p>
-  <% } %>
   <form action="/login" method="POST">
     <input type="text" name="username" placeholder="Username" required>
     <input type="password" name="password" placeholder="Password" required>
     <button type="submit">Login</button>
   </form>
+  <% if (error) { %> <p><%= error %></p> <% } %>
 </body>
 </html>
