--- a/views/login.ejs
+++ b/views/login.ejs
@@ -2,7 +2,9 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Login</title>
+  <link rel="stylesheet" href="/styles/style.css">
 </head>
 <body>
   <h1>Login</h1>
@@ -11,6 +13,8 @@
     <input type="password" name="password" placeholder="Password" required>
     <button type="submit">Login</button>
   </form>
-  <% if (error) { %> <p><%= error %></p> <% } %>
+  <% if (typeof error !== "undefined" && error) { %>
+    <p style="color: red;"><%= error %></p>
+  <% } %>
 </body>
 </html>
