--- a/views/register.ejs
+++ b/views/register.ejs
@@ -16,7 +16,7 @@
   <% if (error) { %>
     <p style="color: red;"><%= error %></p>
   <% } %>
-  <% if (typeof successMessage !== "undefined" && successMessage) { %>
+  <% if (successMessage) { %>
     <p style="color: green;"><%= successMessage %></p>
   <% } %>
 </body>
