--- a/views/login.ejs
+++ b/views/login.ejs
@@ -9,12 +9,13 @@
 <body>
   <h1>Login</h1>
   <form action="/login" method="POST">
-    <input type="text" name="username" placeholder="Username" required>
-    <input type="password" name="password" placeholder="Password" required>
+    <input type="text" name="username" placeholder="Enter your username" required>
+    <input type="password" name="password" placeholder="Enter your password" required>
     <button type="submit">Login</button>
   </form>
-  <% if (typeof error !== "undefined" && error) { %>
+  <% if (error) { %>
     <p style="color: red;"><%= error %></p>
   <% } %>
+  <p>Don't have an account? <a href="/register">Register</a></p>
 </body>
 </html>
