--- a/views/login.ejs
+++ b/views/login.ejs
@@ -2,20 +2,19 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Login</title>
-  <link rel="stylesheet" href="/styles/style.css">
+  <title>Login - Say Ya Mind</title>
+  <link rel="stylesheet" href="/styles.css">
 </head>
 <body>
   <h1>Login</h1>
-  <form action="/login" method="POST">
-    <input type="text" name="username" placeholder="Enter your username" required>
-    <input type="password" name="password" placeholder="Enter your password" required>
-    <button type="submit">Login</button>
-  </form>
   <% if (error) { %>
     <p style="color: red;"><%= error %></p>
   <% } %>
+  <form action="/login" method="POST">
+    <input type="text" name="username" placeholder="Username" required>
+    <input type="password" name="password" placeholder="Password" required>
+    <button type="submit">Login</button>
+  </form>
   <p>Don't have an account? <a href="/register">Register</a></p>
 </body>
 </html>
